<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TransactionFragment">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    <ImageView
            android:id="@+id/transactionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image_of_a_receipt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/receipt" />

    <TableLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:stretchColumns="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center">

            <TextView
                    android:id="@+id/amountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_end_margin"
                    android:fontFamily="@font/nunito"
                    android:text="@string/amount"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/labelFontSize" />

            <TextView
                    android:id="@+id/amountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_start_margin"
                    android:fontFamily="@font/nunito"
                    android:text="@string/initialValue"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/valueFontSize"
                    tools:text="$0000.00" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <TextView
                    android:id="@+id/salesTaxLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_end_margin"
                    android:fontFamily="@font/nunito"
                    android:text="@string/sales_tax"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/labelFontSize" />

            <TextView
                    android:id="@+id/salesTaxValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_start_margin"
                    android:fontFamily="@font/nunito"
                    android:text="@string/initialValue"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/valueFontSize"
                    tools:text="$0000.00" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <TextView
                    android:id="@+id/tipAmountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_end_margin"
                    android:fontFamily="@font/nunito"
                    android:text="@string/tip_amount"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/labelFontSize" />

            <TextView
                    android:id="@+id/tipAmountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_start_margin"
                    android:fontFamily="@font/nunito"
                    android:text="@string/initialValue"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/valueFontSize"
                    tools:text="$0000.00" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <TextView
                    android:id="@+id/totalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_end_margin"
                    android:fontFamily="@font/nunito"
                    android:text="@string/total"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/labelFontSize" />

            <TextView
                    android:id="@+id/totalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_start_margin"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/initialValue"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/valueFontSize"
                    tools:text="$0000.00" />
        </TableRow>
    </TableLayout>

    <Button
            android:id="@+id/runTransactionButton"
            style="@style/Button"
            android:layout_marginBottom="24dp"
            android:enabled="false"
            android:text="@string/run_transaction"
            app:layout_constraintBottom_toTopOf="@+id/troubleConnectingTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/troubleConnectingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/trouble_connecting"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/goToManualButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/goToManualButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:background="@null"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/go_to_manual"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>