<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <include layout="@layout/background"/>

    <TextView
            android:id="@+id/invoiceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunito"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/bleConnectionImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Invoice #asgasihg;aksjdg;lkjasd;gjasdg" />

    <Button
            android:id="@+id/bleConnectionButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/connect_now"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/invoiceTextView"
            app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
            android:id="@+id/bleConnectionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/disconnected_description"
            app:layout_constraintEnd_toStartOf="@+id/bleConnectionButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/disconnected" />

    <FrameLayout
            android:id="@+id/fragment_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/poweredByClearent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invoiceTextView"
            android:layout_marginTop="8dp">
    </FrameLayout>

    <Button
            android:id="@+id/cancelManualEntryButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:drawableEnd="@drawable/cancel"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
            android:id="@+id/infoButton"
            android:contentDescription="@string/info_button_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/info" />


</androidx.constraintlayout.widget.ConstraintLayout>